# Illuminator

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPRECATED - environment_macosarm64.yml  DEPRECATED - environment_windows.yml  LICENSE  Models.md  README.md  User guide document.md  User guide.md  WAIVER  cluster-setup.html  demo.py  deprecated-cluster-setup.html  dev-notes.md  environment.yml  environment_alex.yaml  environment_full.yml  final_version_scenario.py  genindex.html  illuminator-config.yaml  illuminator-config2.yaml  illuminator.yaml  index.html  main.py  objects.inv  optimization_results.csv  out.csv  out_Tutorial1.csv  out_battery.csv  out_thermolyzer.csv  pyproject.toml  quick-start.html  readme.md  run.sh  search.html  searchindex.js  setup.py  (+10 more)
.doctrees/: cluster-setup.doctree  deprecated-cluster-setup.doctree  environment.pickle  index.doctree  quick-start.doctree
Agents/: prosumer_S_model.py  prosumer_model.py  prosumer_mosaik.py
Games/: emarket_model.py  emarket_mosaik.py  p2ptrading_model.py  p2ptrading_mosaik.py  rtprice_model.py  rtprice_mosaik.py
Illuminator_Engine/: collector.py  state_space_simulator.py
Input profiles/: load_data.txt  pv_data_Rotterdam_NL-15min.txt
Models/: collector.py  influxdbwriter.py  mqttsend.py  multiplier_model.py  submqtt.py
Output profiles/: results.csv
Result/: Emarket_results.csv  Ftrading_results.csv  RTprice_result.csv  forecast.csv  results.csv
Scenarios/: Battery_data.txt  eboiler_data.txt  electrolyser_data.txt  fuelcell_data.txt  h2demand_ev_data.txt  h2demand_fs_data.txt  h2demand_r_data.txt  h2product_data.txt  h2storage_data.txt  hp_data.txt  load_data_shifted.txt  qdemand_i_data.txt  qdemand_r_data.txt  qproduct_data.txt  qstorage_d_data.txt  qstorage_data.txt  qstorage_s_data.txt  results1month_update.csv  ttrailers_data.txt  winddata_NL.txt  winddata_NL_shifted.txt
_sources/: cluster-setup.md.txt  index.rst.txt
cluster_setup/: generate_ssh_key.py  set_ip.py  static_ip.py  update_pi_code.py
configs/: modeling-example.yaml  modeling_schema.py  modelling-example.yaml  modelling_schema.py  parser.py  validate_yaml.py
configuration/: build_configuration_xml.py  build_runshfile.py  buildclientremoterun.py  buildconfigxml.py  buildmodelset.py  config.xml  connection.xml  create_runsh.py  drawpptx.py  example.pptx  interpreter.py  make_dataseries.py  make_multi_dataseries.py  modelling-example.yaml  parse_yaml.py  parse_yaml_CGPT.py  readppt_connectionxml.py  run.sh  run.sh.org
developer/: dev-cluster-setup.html  dev-dashboard.html  developer-docstrings.html  set-up.html  software-architecture.html  start.html  testing-explained.html  writing-tests.html
docs/: Illuminator Model Classification.xlsx  cluster-setup.md  conf.py  frontpage.md  index.rst  quick-start.md  requirements.txt
examples/: PV_test.yaml  Tutorial1.py  adder.yaml  adder_copy.yaml  adder_model.py  battery.yaml  battery_charger.csv  builder_model_example.py  compressor_test.csv  compressor_test.yaml  controller_test.csv  controller_test.yaml  model_test.yaml  (+11 more)
(+1216 files in other folders)
