[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# [tool.hatch.build.targets.wheel]
#       packages = ["src/illuminator"]

[project]
name = "illuminator"
version = "3.0.0-beta.3"
description = "A development toolkit for simulating energy systems"
license = {file = "LICENSE"}
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    { name = "Jort Groen"},
    { name = "Despoina Georgiadi"},
    { name = "Josip Grguric"},
    { name = "Joan Pijpker"},
    { name = "Manuel Garcia Alvarez"},
    { name = "Mano Rom"},
]
maintainers = [
    { name = "Illuminator Team", email = "illuminator@tudelft.nl"}
    ]
dependencies = [
    "arrow==1.2.3",
    "lxml==4.9.3",
    "matplotlib==3.7.2",
    "paho-mqtt==1.6.1",
    "pandapower==2.13.1",
    "pandas==1.5.3",
    "numpy==1.26.4",
    "mosaik>=3.3.3",
    "ruamel.yaml>= 0.18.5",
    "schema>=0.7.7", 
    "typer>=0.12.5"
]
keywords = [
    "energy",
    "simulation",
    "development",
    "toolkit"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "Sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-copybutton",
    "nbsphinx",
]

[project.scripts]
illuminator = "illuminator.cli.main:app"

[project.urls]
Documentation = "https://illuminator-team.github.io/Illuminator/"
Repository = "https://github.com/Illuminator-team/Illuminator.git"
"Bug Tracker" = "https://github.com/Illuminator-team/Illuminator/issues"
Changelog = "https://github.com/Illuminator-team/Illuminator/blob/main/CHANGELOG.md"
